# apt-scraper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
aptlogger/: content.js  manifest.json  popup.html  popup.js
src/: README.md  cli.py  scraper.py  soup.py
tests/: conftest.py  test_logger.py  test_scraper.py
tests/fixtures/: flatfox_listing.html
